[dyad] API-stöd för integrationsmönster förbättrat - wrote 4 file(s) + extra files edited outside of Dyad
